Updated build script, fixed restart after jump death, minor graphics changes

--- a/main.css
+++ b/main.css
@@ -20,6 +20,6 @@ canvas {
 
 span {
     color: white;
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: monospace;
     font-size: 15px;
 }
